changed nameSet to nameList